force-app/main/default/objects/OpportunityLineItemSchedule/OpportunityLineItemSchedule.object-meta.xml
<CustomObject>
</CustomObject>