force-app/main/default/objects/OpportunityLineItemSchedule/fields/Actual_Quanity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quanity__c</fullName>
    <label>Actual Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>