force-app/main/default/objects/OpportunityLineItemSchedule/fields/Growth_Amount__c.field-meta.xml
<CustomField>
    <fullName>Growth_Amount__c</fullName>
    <label>Growth Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>