force-app/main/default/objects/OpportunityLineItemSchedule/fields/Price_Impact_Amount__c.field-meta.xml
<CustomField>
    <fullName>Price_Impact_Amount__c</fullName>
    <label>Price Impact Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>