force-app/main/default/objects/OpportunityLineItemSchedule/fields/Schedule_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Line_Name__c</fullName>
    <formula>IF(( MONTH( ScheduleDate )  &gt;= 1 &amp;&amp; MONTH( ScheduleDate ) &lt;= 3 ),
&quot;Q1&quot;,
IF(( MONTH( ScheduleDate )  &gt;= 4 &amp;&amp; MONTH( ScheduleDate ) &lt;= 6 ),
&quot;Q2&quot;,
IF(( MONTH( ScheduleDate )  &gt;= 7 &amp;&amp; MONTH( ScheduleDate ) &lt;= 9 ),
&quot;Q3&quot;,
&quot;Q4&quot;)))
&amp; &quot; &quot;
&amp; TEXT(YEAR(ScheduleDate))</formula>
    <label>Schedule Line Name</label>
    <type>Text</type>
</CustomField>